Small Fixes in Dark Mode

--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -1,7 +1,20 @@
+.dark-theme{
+  background: #505050;
+}
+
+.dark-theme .mat-raised-button:not([class*=mat-elevation-z]) {
+  box-shadow: 0 3px 1px -2px rgba(255, 255, 255, 0.2), 0 2px 2px 0 rgba(255, 255, 255, 0.14)
+}
+
 .dark-theme #selections-table mat-expansion-panel {
     background: #3e3e3e;
     color: #fff !important;
     border-color: #757575;
+    box-shadow: 0 3px 1px -2px rgba(255, 255, 255, 0.2), 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 1px 5px 0 rgba(255, 255, 255, 0.12);
+}
+
+.dark-theme #code-area {
+  box-shadow: 0 3px 1px -2px rgba(255, 255, 255, 0.2), 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 1px 5px 0 rgba(255, 255, 255, 0.12);
 }
 
 .dark-theme .mat-expansion-panel-header-title {
@@ -28,12 +41,18 @@
 
 .dark-theme #options {
   background: #636161;
-  border-color: #353535;
+  border-color: #757575;
   color: #fff;
+  box-shadow: 0 3px 1px -2px rgba(255, 255, 255, 0.2), 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 1px 5px 0 rgba(255, 255, 255, 0.12);
 }
 
 .dark-theme .mat-select-value {
   color: #fff;
+}
+
+.dark-theme.mat-select-panel{
+  box-shadow: 0 2px 4px -1px rgba(255, 255, 255, 0.2), 0 4px 5px 0 rgba(248, 248, 248, 0.14), 0 1px 10px 0 rgba(255, 255, 255, 0.12);
+  border: 1px solid #757575;
 }
 
 .dark-theme .mat-select-arrow {
@@ -46,7 +65,7 @@
 }
 
 .dark-theme .mat-slider-track-background {
-  background-color: rgba(255, 255, 255, 0.56) !important;
+  background-color: rgba(255, 255, 255, 0.56);
 }
 
 .dark-theme .mat-checkbox-frame {
@@ -68,15 +87,11 @@
   background: #8a8a8a;
 }
 
-.dark-theme{
-  background: #505050;
-}
-
 .dark-theme .mat-toolbar.mat-primary {
-    background: #3a3a3a;
-    box-shadow: 0 3px 5px -1px rgba(255, 255, 255, 0.2),
-    0 6px 10px 0 rgba(255, 255, 255, 0.14),
-    0 1px 18px 0 rgba(255, 255, 255, 0.12);
+  background: #3a3a3a;
+  box-shadow: 0 3px 5px -1px rgba(255, 255, 255, 0.2),
+  0 6px 10px 0 rgba(255, 255, 255, 0.14),
+  0 1px 18px 0 rgba(255, 255, 255, 0.12);
 }
 
 .dark-theme .mat-fab.mat-primary,
@@ -84,6 +99,7 @@
 .dark-theme .mat-mini-fab.mat-primary,
 .dark-theme .mat-raised-button.mat-primary {
   background-color: #212121;
+  box-shadow: 0 3px 1px -2px rgba(255, 255, 255, 0.2), 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 1px 5px 0 rgba(255, 255, 255, 0.12);
 }
 
 .dark-theme ::-webkit-scrollbar {
@@ -104,3 +120,147 @@
   border-radius: 0px;
   cursor: pointer;
 }
+
+/* Dark Theme Start */
+.dark-theme .CodeMirror {
+  background: #272822;
+  color: #f8f8f2;
+}
+
+.dark-theme .CodeMirror-selected {
+  background: #49483E;
+}
+
+.dark-theme .CodeMirror-line::selection,
+.dark-theme .CodeMirror-line>span::selection,
+.dark-theme .CodeMirror-line>span>span::selection {
+  background: rgba(73, 72, 62, .99);
+}
+
+.dark-theme .CodeMirror-line::-moz-selection,
+.dark-theme .CodeMirror-line>span::-moz-selection,
+.dark-theme .CodeMirror-line>span>span::-moz-selection {
+  background: rgba(73, 72, 62, .99);
+}
+
+.dark-theme .CodeMirror-gutters {
+  background: #3c3c3c;
+  border-right: 0px;
+}
+
+.dark-theme .CodeMirror-guttermarker {
+  color: white;
+}
+
+.dark-theme .CodeMirror-guttermarker-subtle {
+  color: #d0d0d0;
+}
+
+.dark-theme .CodeMirror-linenumber {
+  color: #d0d0d0;
+}
+
+.dark-theme .CodeMirror-cursor {
+  border-left: 1px solid #f8f8f0;
+}
+
+.dark-theme .cm-comment {
+  color: #75715e;
+}
+
+.dark-theme .cm-atom {
+  color: #ae81ff;
+}
+
+.dark-theme .cm-number {
+  color: #ae81ff;
+}
+
+.dark-theme .cm-comment.cm-attribute {
+  color: #97b757;
+}
+
+.dark-theme .cm-comment.cm-def {
+  color: #bc9262;
+}
+
+.dark-theme .cm-comment.cm-tag {
+  color: #bc6283;
+}
+
+.dark-theme .cm-comment.cm-type {
+  color: #5998a6;
+}
+
+.dark-theme .cm-property,
+.dark-theme .cm-attribute {
+  color: #a6e22e;
+}
+
+.dark-theme .cm-keyword {
+  color: #f92672;
+}
+
+.dark-theme .cm-builtin {
+  color: #66d9ef;
+
+}
+
+.dark-theme .cm-string {
+  color: #e6db74;
+
+}
+
+.dark-theme .cm-variable {
+  color: #f8f8f2;
+
+}
+
+.dark-theme .cm-variable-2 {
+  color: #9effff;
+
+}
+
+.dark-theme .cm-variable-3,
+.dark-theme .cm-type {
+  color: #66d9ef;
+
+}
+
+.dark-theme .cm-def {
+  color: #fd971f;
+
+}
+
+.dark-theme .cm-bracket {
+  color: #f8f8f2;
+}
+
+.dark-theme .cm-tag {
+  color: #f92672;
+}
+
+.dark-theme .cm-header {
+  color: #ae81ff;
+}
+
+.dark-theme .cm-link {
+  color: #ae81ff;
+}
+
+.dark-theme .cm-error {
+  background: #f92672;
+  color: #f8f8f0;
+}
+
+.dark-theme .CodeMirror-activeline-background {
+  background: #373831;
+
+}
+
+.dark-theme .CodeMirror-matchingbracket {
+  text-decoration: underline;
+  color: white;
+}
+
+/* Dark Theme End */
