--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -55,8 +55,7 @@ body {
   overflow-y: auto;
   width: calc(100% - 7px);
   margin-bottom: 10px;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, .24),
-    0 0 2px rgba(0, 0, 0, .12);
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   outline: none;
   font-family: 'Roboto Mono';
   font-size: 13px;
@@ -707,147 +706,3 @@ div.CodeMirror-dragcursors {
 }
 
 /* Default Theme End */
-
-/* Dark Theme Start */
-.dark-theme .CodeMirror {
-  background: #272822;
-  color: #f8f8f2;
-}
-
-.dark-theme .CodeMirror-selected {
-  background: #49483E;
-}
-
-.dark-theme .CodeMirror-line::selection,
-.dark-theme .CodeMirror-line>span::selection,
-.dark-theme .CodeMirror-line>span>span::selection {
-  background: rgba(73, 72, 62, .99);
-}
-
-.dark-theme .CodeMirror-line::-moz-selection,
-.dark-theme .CodeMirror-line>span::-moz-selection,
-.dark-theme .CodeMirror-line>span>span::-moz-selection {
-  background: rgba(73, 72, 62, .99);
-}
-
-.dark-theme .CodeMirror-gutters {
-  background: #3c3c3c;
-  border-right: 0px;
-}
-
-.dark-theme .CodeMirror-guttermarker {
-  color: white;
-}
-
-.dark-theme .CodeMirror-guttermarker-subtle {
-  color: #d0d0d0;
-}
-
-.dark-theme .CodeMirror-linenumber {
-  color: #d0d0d0;
-}
-
-.dark-theme .CodeMirror-cursor {
-  border-left: 1px solid #f8f8f0;
-}
-
-.dark-theme .cm-comment {
-  color: #75715e;
-}
-
-.dark-theme .cm-atom {
-  color: #ae81ff;
-}
-
-.dark-theme .cm-number {
-  color: #ae81ff;
-}
-
-.dark-theme .cm-comment.cm-attribute {
-  color: #97b757;
-}
-
-.dark-theme .cm-comment.cm-def {
-  color: #bc9262;
-}
-
-.dark-theme .cm-comment.cm-tag {
-  color: #bc6283;
-}
-
-.dark-theme .cm-comment.cm-type {
-  color: #5998a6;
-}
-
-.dark-theme .cm-property,
-.dark-theme .cm-attribute {
-  color: #a6e22e;
-}
-
-.dark-theme .cm-keyword {
-  color: #f92672;
-}
-
-.dark-theme .cm-builtin {
-  color: #66d9ef;
-
-}
-
-.dark-theme .cm-string {
-  color: #e6db74;
-
-}
-
-.dark-theme .cm-variable {
-  color: #f8f8f2;
-
-}
-
-.dark-theme .cm-variable-2 {
-  color: #9effff;
-
-}
-
-.dark-theme .cm-variable-3,
-.dark-theme .cm-type {
-  color: #66d9ef;
-
-}
-
-.dark-theme .cm-def {
-  color: #fd971f;
-
-}
-
-.dark-theme .cm-bracket {
-  color: #f8f8f2;
-}
-
-.dark-theme .cm-tag {
-  color: #f92672;
-}
-
-.dark-theme .cm-header {
-  color: #ae81ff;
-}
-
-.dark-theme .cm-link {
-  color: #ae81ff;
-}
-
-.dark-theme .cm-error {
-  background: #f92672;
-  color: #f8f8f0;
-}
-
-.dark-theme .CodeMirror-activeline-background {
-  background: #373831;
-
-}
-
-.dark-theme .CodeMirror-matchingbracket {
-  text-decoration: underline;
-  color: white;
-}
-
-/* Dark Theme End */
